--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -26,7 +26,7 @@
 
 
         <Button
-            android:id="@+id/LoginButton"
+            android:id="@+id/ReplyButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/white_round_corners_background"
